# Groww-MCP

./: .example.env  .gitignore  ALERT_FIX_SUMMARY.md  ALERT_WORKFLOW_EXPLAINED.md  README.md  pyproject.toml  setup_config.py
groww_mcp_server/: __init__.py  alert_manager.py  command_parser.py  config.py  email_config.py  email_service.py  email_templates.py  groww_client.py  market_utils.py  models.py  server.py
