[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groww-mcp-server"
version = "0.1.0"
description = "MCP server for Groww stock trading API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "asyncio",
    "growwapi>=0.0.7",
]

[project.scripts]
groww-mcp-server = "groww_mcp_server.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
] 